; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_seat.c_seat_send_focus.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_seat.c_seat_send_focus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.wlr_xwayland* }
%struct.wlr_xwayland = type { i32 }
%struct.sway_node = type { i64, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.sway_view* }
%struct.sway_view = type { i64, i32 }
%struct.sway_seat = type { i32, i32 }
%struct.wlr_pointer_constraint_v1 = type { i32 }

@N_CONTAINER = common dso_local global i64 0, align 8
@server = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@SWAY_VIEW_XWAYLAND = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sway_node*, %struct.sway_seat*)* @seat_send_focus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @seat_send_focus(%struct.sway_node* %0, %struct.sway_seat* %1) #0 {
  %3 = alloca %struct.sway_node*, align 8
  %4 = alloca %struct.sway_seat*, align 8
  %5 = alloca %struct.sway_view*, align 8
  %6 = alloca %struct.wlr_pointer_constraint_v1*, align 8
  store %struct.sway_node* %0, %struct.sway_node** %3, align 8
  store %struct.sway_seat* %1, %struct.sway_seat** %4, align 8
  %7 = load %struct.sway_node*, %struct.sway_node** %3, align 8
  %8 = load %struct.sway_seat*, %struct.sway_seat** %4, align 8
  %9 = call i32 @seat_send_activate(%struct.sway_node* %7, %struct.sway_seat* %8)
  %10 = load %struct.sway_node*, %struct.sway_node** %3, align 8
  %11 = getelementptr inbounds %struct.sway_node, %struct.sway_node* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @N_CONTAINER, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %21

15:                                               ; preds = %2
  %16 = load %struct.sway_node*, %struct.sway_node** %3, align 8
  %17 = getelementptr inbounds %struct.sway_node, %struct.sway_node* %16, i32 0, i32 1
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load %struct.sway_view*, %struct.sway_view** %19, align 8
  br label %22

21:                                               ; preds = %2
  br label %22

22:                                               ; preds = %21, %15
  %23 = phi %struct.sway_view* [ %20, %15 ], [ null, %21 ]
  store %struct.sway_view* %23, %struct.sway_view** %5, align 8
  %24 = load %struct.sway_view*, %struct.sway_view** %5, align 8
  %25 = icmp ne %struct.sway_view* %24, null
  br i1 %25, label %26, label %57

26:                                               ; preds = %22
  %27 = load %struct.sway_seat*, %struct.sway_seat** %4, align 8
  %28 = load %struct.sway_view*, %struct.sway_view** %5, align 8
  %29 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = call i64 @seat_is_input_allowed(%struct.sway_seat* %27, i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %57

33:                                               ; preds = %26
  %34 = load %struct.sway_seat*, %struct.sway_seat** %4, align 8
  %35 = load %struct.sway_view*, %struct.sway_view** %5, align 8
  %36 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @seat_keyboard_notify_enter(%struct.sway_seat* %34, i32 %37)
  %39 = load %struct.sway_seat*, %struct.sway_seat** %4, align 8
  %40 = load %struct.sway_view*, %struct.sway_view** %5, align 8
  %41 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 8
  %43 = call i32 @seat_tablet_pads_notify_enter(%struct.sway_seat* %39, i32 %42)
  %44 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 0), align 8
  %45 = load %struct.sway_view*, %struct.sway_view** %5, align 8
  %46 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %45, i32 0, i32 1
  %47 = load i32, i32* %46, align 8
  %48 = load %struct.sway_seat*, %struct.sway_seat** %4, align 8
  %49 = getelementptr inbounds %struct.sway_seat, %struct.sway_seat* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 4
  %51 = call %struct.wlr_pointer_constraint_v1* @wlr_pointer_constraints_v1_constraint_for_surface(i32 %44, i32 %47, i32 %50)
  store %struct.wlr_pointer_constraint_v1* %51, %struct.wlr_pointer_constraint_v1** %6, align 8
  %52 = load %struct.sway_seat*, %struct.sway_seat** %4, align 8
  %53 = getelementptr inbounds %struct.sway_seat, %struct.sway_seat* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = load %struct.wlr_pointer_constraint_v1*, %struct.wlr_pointer_constraint_v1** %6, align 8
  %56 = call i32 @sway_cursor_constrain(i32 %54, %struct.wlr_pointer_constraint_v1* %55)
  br label %57

57:                                               ; preds = %33, %26, %22
  ret void
}

declare dso_local i32 @seat_send_activate(%struct.sway_node*, %struct.sway_seat*) #1

declare dso_local i64 @seat_is_input_allowed(%struct.sway_seat*, i32) #1

declare dso_local i32 @seat_keyboard_notify_enter(%struct.sway_seat*, i32) #1

declare dso_local i32 @seat_tablet_pads_notify_enter(%struct.sway_seat*, i32) #1

declare dso_local %struct.wlr_pointer_constraint_v1* @wlr_pointer_constraints_v1_constraint_for_surface(i32, i32, i32) #1

declare dso_local i32 @sway_cursor_constrain(i32, %struct.wlr_pointer_constraint_v1*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
